# vtuber-live-translate

./: .gitignore  CLAUDE.md  README.md  update.json
.github/workflows/: android-debug.yml  friend-gateway.yml
android/: .gitignore
android/app/: build.gradle.kts  debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/color/: selector_bottom_nav.xml  selector_field_stroke.xml  selector_scene_chip_bg.xml  selector_scene_chip_text.xml
android/app/src/main/res/drawable/: bg_bottom_navigation.xml  bg_history_badge.xml  bg_history_context.xml  bg_idle_dot.xml  bg_language_pill.xml  bg_luminous_chip_selector.xml  bg_mic_halo.xml  bg_sheet_handle.xml  bg_status_pill.xml  bg_success_dot.xml  bg_transcript_accent.xml  bg_warning_banner.xml  bg_warning_dot.xml  ic_add_24.xml  ic_brand_translate_24.xml  ic_chevron_right_24.xml  ic_close_24.xml  ic_info_24.xml  ic_key_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_layers_24.xml  ic_menu_24.xml  ic_mic_white_24.xml  ic_more_vert_24.xml  ic_nav_history_24.xml  ic_nav_interp_24.xml  ic_nav_settings_24.xml  ic_nav_video_24.xml  ic_search_24.xml  ic_sparkle_24.xml  (+2 more)
docs/: 00-original-plan.md  01-roadmap.md  02-tech-notes.md  03-android-primer.md  04-dev-log.md  05-felo-benchmark.md  06-ui-polish-plan.md  07-mainactivity-refactor.md  08-ui-declutter-plan.md  README.md
server/friend_gateway/: .env.example  pyproject.toml
server/friend_gateway/src/friend_gateway/: __init__.py  cli.py  config.py  main.py  store.py
server/friend_gateway/tests/: test_api.py  test_store.py
(+97 files in other folders)
