[project]
name = "live-translate-friend-gateway"
version = "0.2.0"
description = "Invite-bound Gemini gateway for LiveTranslate friend testing"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "httpx>=0.28,<1",
  "websockets>=14,<16",
  "cryptography>=43,<47",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
friend-gateway = "friend_gateway.main:run"
friend-gateway-admin = "friend_gateway.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/friend_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
